--- a/get-started.html
+++ b/get-started.html
@@ -352,45 +352,47 @@
             ></button>
           </div>
           <div class="modal-body">
-            <div class="qari-selection-form">
+            <div class="surah-selection-form">
               <div class="feedback__form">
                 <form>
                   <div>
-                    <h6>Select Qari</h6>
-                    <select class="input-form" name="qari" id="qari" required>
-                      <option value="" disabled="">Select the Qari</option>
-                      <option value="qari-1">Qari 1</option>
-                      <option value="qari-2">Qari 2</option>
-                      <option value="qari-3">Qari 3</option>
-                      <option value="qari-4">Qari 4</option>
+                    <h6>Select surah</h6>
+                    <select class="input-form" name="surah" id="surah" required>
+                      <option value="" disabled="">Select the surah</option>
+                      <option value="1">surah 1 - Al Fatiha </option>
+                      <option disabled value="2">surah 2 - TODO: Add Surah Name</option>
+                      <option disabled value="3">surah 3 - TODO: Add Surah Name</option>
+                      <option disabled value="4">surah 4 - TODO: Add Surah Name</option>
                     </select>
                   </div>
 
                   <div>
                     <h6>Select Ayat</h6>
                     <select class="input-form" name="ayat" id="ayat" required>
-                      <option value="0" disabled="">Select the Qari</option>
-                      <option value="ayat-1">
+                      <option value="0" disabled="">Select Ayat</option>
+                      <option value="1">
+                        Ayat (0) - بسم الله الرحمن الرحيم
+                      </option>
+                      <option value="2">
                         Ayat (1) - اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِیْنَ
                       </option>
-                      <option value="ayat-2">
+                      <option value="3">
                         Ayat (2) - الرَّحْمٰنِ الرَّحِیْمِ
                       </option>
-                      <option value="ayat-3">
+                      <option value="4">
                         Ayat (3) - مٰلِكِ یَوْمِ الدِّیْنِ
                       </option>
-                      <option value="ayat-4">
+                      <option value="5">
                         Ayat (4) - اِیَّاكَ نَعْبُدُ وَ اِیَّاكَ نَسْتَعِیْنُ
                       </option>
-                      <option value="ayat-5">
+                      <option value="6">
                         Ayat (5) - اِهْدِنَا الصِّرَاطَ الْمُسْتَقِیْمَ
                       </option>
-                      <option value="ayat-6">
+                      <option value="7">
                         Ayat (6) - صِرَاطَ الَّذِیْنَ اَنْعَمْتَ عَلَیْهِمْ
                       </option>
-                      <option value="ayat-7">
-                        Ayat (7) - غَیْرِ الْمَغْضُوْبِ عَلَیْهِمْ وَ لَا
-                        الضَّآلِّیْنَ
+                      <option value="8">
+                        Ayat (7) - غَیْرِ الْمَغْضُوْبِ عَلَیْهِمْ وَ لَا الضَّآلِّیْنَ
                       </option>
                     </select>
                   </div>
