--- a/get-started.html
+++ b/get-started.html
@@ -456,7 +456,7 @@
                   <div class="modal-footer">
                     <button
                       data-bs-dismiss="modal"
-                      type="submit"
+                      type="button"
                       value="Send"
                       class="contact_submit"
                       id="formSubmit"
