big Integration updates

--- a/get-started.html
+++ b/get-started.html
@@ -217,7 +217,7 @@
                           <tr>
                             <td class="sura__toba__tasmiya__hide">
                               <p
-                                class="arabic-font text-center mb-1 arabic__font__sura__tasmia__res p-0"
+                                class="arabic-font text-center mb-1 arabic__font__sura__tasmia__res p-0" id="bismillah_ayat"
                               >
                                 بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِیْمِ
                               </p>
@@ -309,7 +309,7 @@
 
     <div class="main__button">
       <div class="button">
-        <a class="button__btn" href="/prediction-source.html"
+        <a class="button__btn" id="check_prediction"
           >Check Prediction Source</a
         >
       </div>
