--- a/prediction-source.html
+++ b/prediction-source.html
@@ -171,6 +171,27 @@
       </div>
     </div>
 
+
+    <!-- Display Predicted Results for Ayats -->
+    <div class="main_container_choose_section">
+      <div class="main_container_choose_section_content">
+        <div class="main_container_choose_section_right">
+          <section id="predicted-results">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-12">
+                  <div class="margin-set contact-box-shodow">
+                    <h1 style="text-align: center">Predicted Results</h1>
+                    <div class="ayat-results">
+                      <!-- Example of displaying an ayat's results -->
+                      <div class="ayat-result">
+                        <span class="arabic-ayat">رَبِّ الْعٰلَمِینَ</span>
+                        <div class="word-results">
+                          <span class="word" title="Word Accuracy: 90%">رَبِّ</span>
+                          <span class="word" title="Word Accuracy: 85%">الْعٰلَمِینَ</span>
+                        </div>
+                      </div>
+
     <!-- Footer -->
     <footer class="footer_con mt-5">
       <div class="footer-area-bottom">
@@ -184,15 +205,20 @@
           </div>
         </div>
       </div>
+      <div id="testing">Heyyoo</div>
     </footer>
     <!-- End of Footer -->
     
-    <script src="./js/app.js"></script>
-    <script src="./js/recorder.js"></script>
+    <!-- <script src="./js/app.js"></script>
+    <script src="./js/recorder.js"></script> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/prediction-source.js"></script>
+  
+
   </body>
 </html>
+
