--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         id="web_navbar"
       >
         <div class="container">
-          <a class="navbar-brand title__color" href="/">Virtual Quran Assistant</a>
+          <a class="navbar-brand title__color" href="/"
+            >Virtual Quran Assistant</a
+          >
           <button
             class="mobile__navbar"
             type="button"
@@ -132,13 +134,18 @@
       <div class="main_section_component_heading">
         <h4 class="section_heading_h4">Introduction</h4>
         <div class="main_heading_container">
-          <h1>Lorem</h1>
+          <h1>Virtual Quran Assistant</h1>
           <img src="./images/sectionimg.png" alt="heading-img" />
           <p class="main_container_choose_section_left-text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum
-            animi esse praesentium sunt culpa. Quam corporis soluta veniam,
-            molestias nostrum eos ad mollitia hic quibusdam illum tenetur dolor
-            repellendus necessitatibus!
+            The Virtual Quran Assistant is a revolutionary solution that can
+            assist the Muslim community in practicing Quran more effectively. By
+            utilizing this digital tool, users can effortlessly search for
+            particular verses, acquire Quranic vocabulary, and listen to
+            recitations. Additionally, the assistant can offer personalized
+            study plans and progress tracking features to help users remain
+            focused and achieve their learning objectives. Ultimately, this
+            technology has the potential to enhance Quranic study experience and
+            make it more accessible and captivating for Muslims globally.
           </p>
         </div>
       </div>
@@ -153,15 +160,7 @@
             <img src="./images/sectionimg.png" alt="heading-img" />
           </div>
           <h5 class="main_container_home_vission_section-text">
-            Al Wahid Quranic Academy is devoted to the preparation of religious
-            leaders. Our programs are designed with the young and mature
-            learners in mind. We are not just a simple online school, we are
-            committed to provide you complete online education. We are dedicated
-            to provide consistent, high-quality and appropriate religious
-            advising, monitoring, mentoring, nurturing and coaching to ensure
-            your success. We believe that with all of the support services
-            available, every student should learn Reciting Quran properly with
-            Tajweed and even understand the true meanings of Quran
+            In this research endeavor, we delve into the impact of the Virtual Quran Assistant on Quranic learning and recitation proficiency among diverse segments of the Muslim community. Through rigorous analysis and user studies, we aim to uncover the pedagogical advantages and potential challenges presented by this innovative digital tool. By examining user engagement, learning outcomes, and user feedback, our research sheds light on how the Virtual Quran Assistant contributes to an enriched Quranic education landscape.
           </h5>
         </div>
         <div class="main_container_home_vission_section_mission">
@@ -170,14 +169,8 @@
             <img src="./images/sectionimg.png" alt="heading-img" />
           </div>
           <h5 class="main_container_home_vission_section-text">
-            Al Wahid Quranic Academy's mission is to provide Quran and Islamic
-            education, which is par excellence. We believe that with all of the
-            support services and tools available, every student should learn
-            Quran Recitation with Tajweed and Tarteel and aspire to learn the
-            true meaning of Holy Quran. We believe student’s success depends on
-            how well they take responsibility of their own education and it is
-            up to them to take advantage of these services as soon as and as
-            often as they need them.
+            Empowering Quranic Learning through the Virtual Quran Assistant
+The Virtual Quran Assistant offers a multitude of advantages to both novice and experienced learners of the Quran. With its user-friendly interface and advanced features, it provides convenient access to Quranic verses, pronunciation guidance, and personalized study plans. Learners can benefit from enhanced retention, improved recitation accuracy, and a deeper understanding of the Quranic text. Moreover, the assistant's progress tracking and analytics empower users to monitor their advancement, fostering a sense of accomplishment and motivation on their journey of Quranic exploration.
           </h5>
         </div>
       </div>
@@ -185,37 +178,7 @@
     <!-- End of Vision and Mission -->
 
     <!-- Start Of About -->
-    <section class="about__section">
-      <div class="about__main__container">
-        <div class="about__main__container__right">
-          <a
-            href="https://www.loom.com/share/8678af48da334bdea2423e1eafb2c8df"
-            target="_blank"
-          >
-            <img
-              src="https://cdn.loom.com/sessions/thumbnails/8678af48da334bdea2423e1eafb2c8df-with-play.gif"
-              alt="about-section-img"
-              class="about__main__container__right-img about-img"
-            />
-          </a>
-        </div>
-        <div class="about__main__container__left">
-          <h4 class="section_heading_h4">How its work</h4>
-          <div class="main_left_heading_container">
-            <h1 style="text-align: left">Lorem Heading</h1>
-            <img src="./images/sectionimg.png" alt="heading-img" />
-          </div>
-          <h5 class="about__main__container__left-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-            possimus officia aspernatur error, quas earum dignissimos sed alias
-            recusandae architecto veritatis nihil dolorum velit! Maxime id dicta
-            aperiam ratione ipsum doloribus tempora error deserunt magni at eum
-            et, illum impedit dignissimos optio accusamus, laboriosam recusandae
-            consectetur aspernatur reprehenderit aliquid voluptates.
-          </h5>
-        </div>
-      </div>
-    </section>
+   
 
     <!-- End of About -->
 
@@ -226,7 +189,8 @@
           <div class="row">
             <div class="col-12 text-center">
               <p class="mb-0 dir-ltr pt-0">
-                Copyright © <span id="curr_year">2023</span> Virtual Quran Assistant
+                Copyright © <span id="curr_year">2023</span> Virtual Quran
+                Assistant
               </p>
             </div>
           </div>
