documented app.js

--- a/index.html
+++ b/index.html
@@ -160,7 +160,14 @@
             <img src="./images/sectionimg.png" alt="heading-img" />
           </div>
           <h5 class="main_container_home_vission_section-text">
-            In this research endeavor, we delve into the impact of the Virtual Quran Assistant on Quranic learning and recitation proficiency among diverse segments of the Muslim community. Through rigorous analysis and user studies, we aim to uncover the pedagogical advantages and potential challenges presented by this innovative digital tool. By examining user engagement, learning outcomes, and user feedback, our research sheds light on how the Virtual Quran Assistant contributes to an enriched Quranic education landscape.
+            In this research endeavor, we delve into the impact of the Virtual
+            Quran Assistant on Quranic learning and recitation proficiency among
+            diverse segments of the Muslim community. Through rigorous analysis
+            and user studies, we aim to uncover the pedagogical advantages and
+            potential challenges presented by this innovative digital tool. By
+            examining user engagement, learning outcomes, and user feedback, our
+            research sheds light on how the Virtual Quran Assistant contributes
+            to an enriched Quranic education landscape.
           </h5>
         </div>
         <div class="main_container_home_vission_section_mission">
@@ -169,16 +176,25 @@
             <img src="./images/sectionimg.png" alt="heading-img" />
           </div>
           <h5 class="main_container_home_vission_section-text">
-            Empowering Quranic Learning through the Virtual Quran Assistant
-The Virtual Quran Assistant offers a multitude of advantages to both novice and experienced learners of the Quran. With its user-friendly interface and advanced features, it provides convenient access to Quranic verses, pronunciation guidance, and personalized study plans. Learners can benefit from enhanced retention, improved recitation accuracy, and a deeper understanding of the Quranic text. Moreover, the assistant's progress tracking and analytics empower users to monitor their advancement, fostering a sense of accomplishment and motivation on their journey of Quranic exploration.
+            Empowering Quranic Learning through the Virtual Quran Assistant The
+            Virtual Quran Assistant offers a multitude of advantages to both
+            novice and experienced learners of the Quran. With its user-friendly
+            interface and advanced features, it provides convenient access to
+            Quranic verses, pronunciation guidance, and personalized study
+            plans. Learners can benefit from enhanced retention, improved
+            recitation accuracy, and a deeper understanding of the Quranic text.
+            Moreover, the assistant's progress tracking and analytics empower
+            users to monitor their advancement, fostering a sense of
+            accomplishment and motivation on their journey of Quranic
+            exploration.
           </h5>
         </div>
       </div>
     </div>
     <!-- End of Vision and Mission -->
 
-    <!-- Start Of About -->
    
+    <!-- Start Of About -->
 
     <!-- End of About -->
 
